--- a/index.html
+++ b/index.html
@@ -16,84 +16,80 @@
 <body>
   <!-- header srt -->
 
-  <header>
-    <section class="container">
-      <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarSupportedContent">
-
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 50px ;">
-              <li class="nav-item ms-2">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+  <header class="mb-5 mt-3">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <div class="nav-f"><a class="navbar-brand h1 fs-2" href="#">E-course</a></div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="nav-flex m-auto">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="#"><span class="fw-bold">Home</span></a>
               </li>
-              <li class="nav-item ms-2">
-                <a class="nav-link" href="#">Courses</a>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="#"><span class="fw-bold">Course</span></a>
               </li>
-              <li class="nav-item ms-2">
-                <a class="nav-link" href="#">Success</a>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="#"><span class="fw-bold">Deals</span></a>
               </li>
-              <li class="nav-item ms-2">
-                <a class="nav-link" href="#">About</a>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="#"><span class="fw-bold">Success</span></a>
+              </li>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="#"><span class="fw-bold">About</span></a>
+              </li>
+              <li class="nav-item pe-5">
+                <a class="nav-link" href="#"><span class="fw-bold">Contact</span></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <button class="btn btn-outline-success" type="submit">Register</button>
-            </form>
           </div>
+          <button class="btn btn-outline-success" type="submit">Register</button>
         </div>
-      </nav>
-    </section>
-    <!-- <section class="container">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active " style="height: 90vh;">
-              <img  src="img/cover/cover-3.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h1 class="text-white">Get strated Digital <br> Learning</h1>
-                <p class="text-white">Online Learnng Courses, Coaching, Tutor & Training. <br> Full Features For Life Coach Training</p>
-                <button class="btn px-4 py-3 text-white" style="background-color:#289BDE ;">Get Started</button>
-              </div>
-            </div>
-            <div class="carousel-item" style="height: 90vh;">
-              <img src="img/cover/cover-4.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h1 class="text-white">Get strated Digital <br> Learning</h1>
-                <p class="text-white">Online Learnng Courses, Coaching, Tutor & Training. <br> Full Features For Life Coach Training</p>
-                <button class="btn px-4 py-3 text-white" style="background-color:#289BDE ;">Get Started</button>
-              </div>
-            </div>
-            <div class="carousel-item" style="height: 90vh;">
-              <img src="img/cover/cover-1.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h1 class="text-white">Get strated Digital <br> Learning</h1>
-                <p class="text-white">Online Learnng Courses, Coaching, Tutor & Training. <br> Full Features For Life Coach Training</p>
-                <button class="btn px-4 py-3 text-white" style="background-color:#289BDE ;">Get Started</button>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </section> -->
+      </div>
+    </nav>
   </header>
-
+  <div class="banner container mb-5">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="img/cover/cover-1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
+            <h1 class="text-white">Digital Learning</h1>
+            <p class="text-white">This is a E-learning based platform</p>
+            <button type="button" class="btn btn-info">Get Started</button>
+          </div>
+        </div>
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="img/cover/cover-2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption position-absolute top-50 start-50 translate-middle text-white">
+            <h1>Digital Learning</h1>
+            <p>This is a E-learning based platform</p>
+            <button type="button" class="btn btn-info">Get Started</button>
+          </div>
+        </div>
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="img/cover/cover-3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
+            <h1 class="text-white">Digital Learning</h1>
+            <p class="text-white">This is a E-learning based platform</p>
+            <button type="button" class="btn btn-info">Get Started</button>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
   <!-- header end -->
 
   <!-- main srt -->
@@ -219,7 +215,8 @@
                 <h5 class="fw-bolder">Photography Basic Rules</h5>
                 <P class="">
                   <small>
-                    The art or process of producing images by the action of radiant energy and especially light on a sensitive surface
+                    The art or process of producing images by the action of radiant energy and especially light on a
+                    sensitive surface
                   </small>
                 </P>
                 <a class="text-decoration-none fw-bold" href="#">
@@ -240,7 +237,8 @@
                 <h5 class="fw-bolder">Motion Graphics</h5>
                 <P class="">
                   <small>
-                    Motion graphics are pieces of animation or digital footage which create the illusion of motion or rotation.
+                    Motion graphics are pieces of animation or digital footage which create the illusion of motion or
+                    rotation.
                   </small>
                 </P>
                 <a class="text-decoration-none fw-bold" href="#">
@@ -257,34 +255,185 @@
       <!-- row-3 end -->
 
       <div class="container d-flex justify-content-center">
-        <button class="px-4 py-3 mt-5 text-white rounded " style=" border: none; background-color: #289BDE;" >
-           <small>See More Courses</small>
-          </button>
+        <button class="px-4 py-3 mt-5 text-white rounded " style=" border: none; background-color: #289BDE;">
+          <small>See More Courses</small>
+        </button>
       </div>
-      
+
     </section>
-    <section class="container ready">
-      <div class="media row px-4  ">
-        <div class="text text-center col-lg-6 col-xlg-6 col-xxlg-6">
-          <h1>Ready to join?</h1>
-          <p>
-            <small>
-              Safe and Secure. Find Web Design Courses Online. Simple in use. <br> All the Answers. Discover us now! Fast and trusted.
-            </small>
-          </p>
+
+    <article
+      class="container bg-primary rounded d-flex flex-column justify-content-around align-items-center pt-4 mt-5  flex-lg-row flex-xl-row flex-xxl-row "
+      style="height: 200px;">
+      <div class="text-white text-center">
+        <h1>Ready to join?</h1>
+        <p>eLearning has many benefits and holds great promise for the <br> future of training and education.</p>
+      </div>
+      <div>
+        <button type="button" class="btn btn-light mb-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          Register Now
+        </button>
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+          aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title m-auto" id="staticBackdropLabel">Please fill up this form</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form action="" class="w-75 d-flex flex-column m-auto">
+                  <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="floatingName" placeholder="A. Z. M. Arif">
+                    <label for="floatingName">Name</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                  </div>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text">@</span>
+                    <div class="form-floating">
+                      <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                      <label for="floatingInputGroup1">Username</label>
+                    </div>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                  </div>
+                  <button class="btn btn-primary w-25 m-auto">Submit</button>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="button col-lg-6 col-xlg-6 col-xxlg-6 px-4 py-2">
-            <p>
-              <a class=" text-decoration-none fw-bold  " href="">Register Now</a>
-            </p>
+      </div>
+    </article>
+
+
+
+    <section class="container  mt-5">
+      <div class="container text-center">
+        <h2 class="fw-bold">Frequently Asked Questions</h2>
+        <p>
+          <small>
+            Here some question and answer.You can learn this.
+          </small>
+        </p>
+      </div>
+      <div class="accordion w-75 mx-auto" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              What is difference between Flex and Flexbox?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Flexbox allows fine-tuning of alignments to ensure exact specification sharing. Flex Direction allows
+              developers to align elements vertically or horizontally, which is used when developers create and reverse
+              rows or columns.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              What is the difference between CSS and Tailwind CSS?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Tailwind CSS is a utility-based framework based on CSS.</strong> It provides a catalog of CSS
+              classes that makes the process of styling more convenient. Tailwind is not a UI Kit like Bootstrap,
+              Foundation, or Bulma. It does not provide ready-made design blocks.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              What is box model in CSS explain?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              A box in CSS consists of a content area, which is where any text, images, or other HTML elements are
+              displayed. This is optionally surrounded by padding, a border, and a margin, on one or more sides.
+              <strong>The box model describes how these elements work together to create a box as displayed by
+                CSS.</strong>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapseThree">
+              What are semantic tags in HTML?
+            </button>
+          </h2>
+          <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>A semantic element clearly describes its meaning to both the browser and the developer.</strong>
+              Examples of non-semantic elements: <strong>div and span</strong> . Tells nothing about its content.
+              Examples of semantic elements: <strong>form , table , and article</strong> - Clearly defines its content.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapseThree">
+              what is css property?
+            </button>
+          </h2>
+          <div id="collapsefive" class="accordion-collapse collapse" aria-labelledby="headingfive"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>The property is the color piece of this declaration.</strong> It dictates which aspect of the
+              selector will be changed visually. The value is what the chosen CSS property will be changed to. In our
+              example, we are using the hex value of #000, which is CSS shorthand for "black."
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <section class=" container d-none d-xl-block d-xxl-block text-center mt-5">
+      <h2>Trusted by over 800+ companies</h2>
+      <div class="row mt-5">
+        <div class="col-2 ">
+          <img class="img-fluid w-75" src="img/company/company-1.png" alt="">
+        </div>
+        <div class="col-2">
+          <img class="img-fluid w-75" src="img/company/company-2.png" alt="">
+        </div>
+        <div class="col-2">
+          <img class="img-fluid w-75" src="img/company/company-3.png" alt="">
+        </div>
+        <div class="col-2">
+          <img class="img-fluid w-75" src="img/company/company-4.png" alt="">
+        </div>
+        <div class="col-2">
+          <img class="img-fluid w-75" src="img/company/company-5.png" alt="">
+        </div>
+        <div class="col-2">
+          <img class="img-fluid  w-75 " src="img/company/company-6.png" alt="">
+        </div>
+      </div>
+    </section>
+
   </main>
 
-  <main>
 
-  </main>
   <!-- main end -->
 
 
