--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </p>
       </div>
       <!-- row-1 srt -->
-      <div class="container ">
+      <div class="container mt-5 ">
         <div class="row g-2">
 
           <div class="col-lg-6 col-xlg-6 col-xxlg-6">
