--- a/index.html
+++ b/index.html
@@ -310,9 +310,6 @@
         </div>
       </div>
     </article>
-
-
-
     <section class="container  mt-5">
       <div class="container text-center">
         <h2 class="fw-bold">Frequently Asked Questions</h2>
@@ -435,6 +432,21 @@
 
 
   <!-- main end -->
+
+  <!-- fotter srt -->
+
+  <footer>
+    <section class="container-fluid mt-5">
+      <div class="mx-auto text-center">
+        <h1>E-course</h1>
+        <p>Office 50, Dhanmondi, Dhaka, <br> Bangladesh</p>
+        <p>Privacy Ploicy | Terms of use </p>
+      </div>
+    </section>
+  </footer>
+  <!-- fotter end -->
+
+  
 
 
 
