social-media-add

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
   <!-- css link -->
   <link rel="stylesheet" href="css/style.css">
-</head>
 
+  <!-- font awsome -->
+  <script src="https://kit.fontawesome.com/5e9ac5ae27.js" crossorigin="anonymous"></script>
+</head>
 <body>
   <!-- header srt -->
 
@@ -441,6 +443,16 @@
         <h1>E-course</h1>
         <p>Office 50, Dhanmondi, Dhaka, <br> Bangladesh</p>
         <p>Privacy Ploicy | Terms of use </p>
+        <p>
+          <a class="mx-3" target="_blank" href="https://www.facebook.com"> <i class="fa-brands fa-facebook-f"></i></a>
+
+          <a class="mx-3" target="_blank" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+
+          <a class="mx-3" target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+
+          <a class="mx-3" target="_blank" href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok"></i></a>
+          
+        </p>
       </div>
     </section>
   </footer>
