--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>E-course</title>
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -62,7 +62,7 @@
           <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
             <h1 class="text-white">Digital Learning</h1>
             <p class="text-white">This is a E-learning based platform</p>
-            <button type="button" class="btn btn-info">Get Started</button>
+            <button type="button" class="btn text-white fw-bold" style="background-color: #289BDE;">Get Started</button>
           </div>
         </div>
         <div class="carousel-item active" data-bs-interval="2000">
@@ -70,7 +70,7 @@
           <div class="carousel-caption position-absolute top-50 start-50 translate-middle text-white">
             <h1>Digital Learning</h1>
             <p>This is a E-learning based platform</p>
-            <button type="button" class="btn btn-info">Get Started</button>
+            <button type="button" class="btn text-white fw-bold" style="background-color: #289BDE;">Get Started</button>
           </div>
         </div>
         <div class="carousel-item active" data-bs-interval="2000">
@@ -78,7 +78,7 @@
           <div class="carousel-caption position-absolute top-50 start-50 translate-middle">
             <h1 class="text-white">Digital Learning</h1>
             <p class="text-white">This is a E-learning based platform</p>
-            <button type="button" class="btn btn-info">Get Started</button>
+            <button type="button" class="btn text-white fw-bold" style="background-color: #289BDE;">Get Started</button>
           </div>
         </div>
       </div>
@@ -312,6 +312,7 @@
         </div>
       </div>
     </article>
+
     <section class="container  mt-5">
       <div class="container text-center">
         <h2 class="fw-bold">Frequently Asked Questions</h2>
@@ -437,20 +438,20 @@
 
   <!-- fotter srt -->
 
-  <footer>
-    <section class="container-fluid mt-5">
-      <div class="mx-auto text-center">
-        <h1>E-course</h1>
-        <p>Office 50, Dhanmondi, Dhaka, <br> Bangladesh</p>
-        <p>Privacy Ploicy | Terms of use </p>
-        <p>
-          <a class="mx-3" target="_blank" href="https://www.facebook.com"> <i class="fa-brands fa-facebook-f"></i></a>
+  <footer style="height: 300px;" class="bg-dark">
+    <section class="container-fluid mt-5 " style="padding-top:30px ;">
+      <div class="mx-auto text-center text-white ">
+        <h1 class="mt-5">E-course</h1>
+        <p><small>Office 50, Dhanmondi, Dhaka, <br> Bangladesh</small></p>
+        <p><small>Privacy Ploicy | Terms of use</small> </p>
+        <p >
+          <a class="mx-3 text-white" target="_blank" href="https://www.facebook.com"> <i class="fa-brands fa-facebook-f"></i></a>
 
-          <a class="mx-3" target="_blank" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+          <a class="mx-3 text-white" target="_blank" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
 
-          <a class="mx-3" target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+          <a class="mx-3 text-white" target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
 
-          <a class="mx-3" target="_blank" href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok"></i></a>
+          <a class="mx-3 text-white" target="_blank" href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok"></i></a>
           
         </p>
       </div>
