--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
     </section>
 
     <article
-      class="container bg-primary rounded d-flex flex-column justify-content-around align-items-center pt-4 mt-5  flex-lg-row flex-xl-row flex-xxl-row "
-      style="height: 200px;">
+      class="container  rounded d-flex flex-column justify-content-around align-items-center pt-4 mt-5  flex-lg-row flex-xl-row flex-xxl-row "
+      style="background-color: #289BDE; height: 200px;">
       <div class="text-white text-center">
         <h1>Ready to join?</h1>
         <p>eLearning has many benefits and holds great promise for the <br> future of training and education.</p>
